--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -279,8 +279,8 @@
 .error>i{display:inline-block;margin-right:3px;width:14px;height:14px;background:url(../img/tan_icon@2x.png) no-repeat;vertical-align:middle;}
 .iphone,.name,.pass-code,.send-code{height:36px;border:none;border-radius:4px;}
 .iphone,.name{width:285px;color:#772c61;text-indent:22px;font-size:14px;}
-.pass-code{margin-right:5px;width:165px;text-indent:22px;}
-.send-code{min-width:110px;background-color:#fff;color:#772c61;font-size:14px;}
+.pass-code{margin-right:5px;width:170px;text-indent:22px;font-size:14px;}
+.send-code{background-color:#fff;color:#772c61;font-size:14px;min-width:108px;}
 .select{position:relative;width:285px;height:36px;border-radius:4px;background:#fff url(../img/tog-icon@2x.png) no-repeat right 10px center;}
 .select.selecttoggle{background:#fff url(../img/togtop-icon@2x.png) no-repeat right 10px center;}
 .select .placeholder{display:inline-block;width:100px;height:36px;border-bottom-left-radius:4px;border-top-left-radius:4px;background-image:-o-linear-gradient(#ffe3bf,#f6b366);background-image:-moz-linear-gradient(#ffe3bf,#f6b366);background-image:-webkit-linear-gradient(#ffe3bf,#f6b366);background-image:linear-gradient(#ffe3bf,#f6b366);color:#dc0006;text-align:center;font-size:14px;line-height:36px;}
