--- a/views/widget/modal/dialog.html
+++ b/views/widget/modal/dialog.html
@@ -5,7 +5,7 @@
 		 <div class="form-group">
 			<div><input type="text" placeholder="请输入姓名" class="name" id="myname" maxlength="10"></div>
 			<div><input type="text" placeholder="请输入手机号" class="iphone"></div>
-			<div style="position: relative;">
+			<div style="position: relative;font-size:0;">
 			  <input type="text" class="pass-code">
 			  <button type="button" class="send-code" data-coupon="">点击发送验证码</button>
 			  <span class="error"><i></i>手机号格式不正确</span>
