--- a/views/widget/liuxue_item/yimin_item.html
+++ b/views/widget/liuxue_item/yimin_item.html
@@ -24,7 +24,7 @@
 }
 .gw-people img{width:51px;height:51px;-webkit-border-radius:50%;border-radius:50%}
 .gw-people span{color:#333;font-size:14px;margin-top: 15px;display: inline-block;margin-left: 10px;}
-.gw-people .pepple-icon > i{ vertical-align:middle; display:inline-block;width: 20px;height: 20px; background:url(../assets/img/1v.png) no-repeat;background-position:right center}
+.gw-people .pepple-icon > i{ vertical-align:middle; display:inline-block;width: 20px;height: 20px; background-repeat: no-repeat;background-position:right center}
 .gw-items p{color:#333;font-size:16px;padding-top: 10px;text-indent: 20px;}
 .gw-legend{float:right;margin-top:18px;padding:2px 8px;-webkit-border-radius:8px;border-radius:8px;background:#f9f6f1;color:#c13232;font-size:12px}
 .gw-news{width:76px;height:20px;-webkit-border-radius:10px;border-radius:10px;background-color:#ff8547;color:#fff;text-align:center;line-height:20px}
@@ -62,7 +62,7 @@
 					<li>
 						<div class="gw-people">
 							<a target="_blank" href="{{helper.urlgen(item.uid | string)}}" style="background-image:url({{helper.avaterimg(item.user_info.uid, 'small', item.user_info.status,item.user_info.version)}});background-size:cover"></a>
-							<span class="pepple-icon">{{item.user_info.realname}}<i></i></span>
+							<span class="pepple-icon">{{item.user_info.realname}}<i style="background-image:url({{helper.cdnhost}}/assets/img/1v.png)"></i></span>
 						</div>
 						{#<p>{{item.type}}</p>#}
 						<a target="_blank" href="{{helper.urlgen('case',item.id | string) if item.type == 1 else helper.urlgen('article',item.id | string)}}">
@@ -81,7 +81,7 @@
 							<li class="gw-newslist">
 								<div class="gw-people">
 									<a target="_blank" href="{{helper.urlgen(item.uid|string)}}" style="background-image:url({{helper.avaterimg(item.user_info.uid, 'small', item.user_info.status,item.user_info.version)}});background-size:cover;"></a>
-									<span class="pepple-icon"><em>{{item.user_info.realname}}</em><i></i></span>
+									<span class="pepple-icon"><em>{{item.user_info.realname}}</em><i style="background-image:url({{helper.cdnhost}}/assets/img/1v.png)"></i></span>
 								</div>
 								{#<p>{{item.type}}</p>#}
 								<a target="_blank" href="{{helper.urlgen('case',item.id | string) if item.type == 1 else helper.urlgen('article',item.id | string)}}">
