--- a/views/edit_article_yimin.html
+++ b/views/edit_article_yimin.html
@@ -316,7 +316,8 @@
   <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
-  <script  src="{{helper.cdnhost}}/assets/js/wangEditor.js"></script>
+  <!-- <script  src="{{helper.cdnhost}}/assets/js/wangEditor.js"></script> -->
+  <script src="//unpkg.com/wangeditor/release/wangEditor.min.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
   <script >
     $(function(){
@@ -436,7 +437,8 @@
       var E = window.wangEditor;
       var editor = new E('#editor','#editor1');
       // 自定义菜单配置
-      editor.customConfig.menus = [   
+      editor.customConfig.menus = [  
+        'head',   
         'bold',  // 粗体
         'italic',  // 斜体
         'underline',  // 下划线
@@ -453,7 +455,15 @@
       ];
       editor.customConfig.debug = false;
       // 关闭粘贴样式的过滤
-      editor.customConfig.pasteFilterStyle = false;
+      // 关闭粘贴样式的过滤
+      editor.customConfig.pasteFilterStyle = true;
+      editor.customConfig.pasteIgnoreImg = true;
+      // 自定义处理粘贴的文本内容
+      editor.customConfig.pasteTextHandle = function (content) {
+          // content 即粘贴过来的内容（html 或 纯文本），可进行自定义处理然后返回
+          return dataFilter(content);
+      }
+      
       editor.customConfig.uploadFileName = 'yimin_upload';
       // 将图片大小限制为 500K
       editor.customConfig.uploadImgMaxSize = 2*1024 * 1024;
@@ -719,6 +729,56 @@
             $(that).bind('click',savePublish);
           }
         });
+      }
+
+      function dataFilter (originData) {
+        // console.log('前',originData);
+        var returnData = '';
+        var filterArr = [
+            {
+              reg: /<style[\S\s]+?<\/style>/g,
+              str:''
+            },
+            {
+              reg: /<img[^>]*?(src=\"[^\"]*?\")[^>]*?(style=\"[^\"]*?\")*?[^>]*?>/g,
+              str: '<img $1 $2/>'
+            },
+            {
+              reg: /<o:p[\S\s]*?>/g,
+              str: ''
+            },
+            {
+              reg: /<p[\s\S]*?>/g,
+              str: '<p>'
+            },
+            {
+              reg: /<span[\s\S]*?>/g,
+              str: '<span>'
+            },
+            {
+              reg: /<section[\s\S]*?>/g,
+              str: '<section>'
+            },
+            {
+              reg: /<\/section[\s\S]*?>/g,
+              str: '</section>'
+            },
+            {
+              reg: /<spanmargin[\S\s]+<\/spanmargin[\S\s]*?>/,
+              str: ''
+            },
+            {
+              reg:  /<font.*?<\/font>/g,
+              str: ''
+            }
+        ]; 
+        filterArr.forEach(function(val,index) {
+          originData = originData.replace(val.reg,val.str);
+        })      
+        // console.log('---------------------------==================------------------') 
+        returnData =  originData;
+        // console.log('后',returnData);
+        return returnData;
       }
     })  
   </script>
