--- a/views/about/new_about.html
+++ b/views/about/new_about.html
@@ -3,6 +3,12 @@
 <head>
 {% include "header_new.html" %}
 <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/about.css">
+<style>
+    .about-guanggao img{
+        margin: 0 auto;
+        height: 450px;
+    }
+</style>
 </head>
 <body style="background: #ffffff;">
 {% include "widget/common_hide/common_hide.html"%}
@@ -11,8 +17,8 @@
 {% import "widget/new_nav_first/common_nav.html" as common_nav %}
 {{ common_nav.common_nav(tdk,helper) }}
 
-<div class="clearfix" style="margin: 0px auto;">
-  <div class=" about-guanggao"  style="height: 450px;background: #dedede;overflow: hidden" id="XC_PROFILE_SEAT1">
+<div class=" clearfix" style="margin: 0px auto;">
+    <div class=" about-guanggao"  style="width: 100%;height: 450px;background: #dedede;overflow: hidden" id="XC_PROFILE_SEAT1">
 </div>
 <div class="clearfix" style="position: relative;top: -50px;">
   {% include "widget/nav_tenth/new_tenth.html" %}
