--- a/views/widget/corporate_events/new_corporate_events.html
+++ b/views/widget/corporate_events/new_corporate_events.html
@@ -76,9 +76,10 @@
     border: 1px #ccc solid;
     border-radius: 8px;
     position: relative;
-    line-height: 25px;
+    line-height: 35px;
     left: 30px;
     float: none;
+    background: #fff;
   }
   .dashiji-con .kuang_jiao{
     display: inline-block;
@@ -97,8 +98,9 @@
     border: 1px #c13232 solid;
     border-radius: 8px;
     position: relative;
-    line-height: 25px;
+    line-height: 35px;
     left: 30px;
+    background: #fff;
   }
   .dashiji-con1 .kuang_jiao1{
     display: inline-block;
@@ -214,14 +216,14 @@
       <div class="dashiji-con clearfix" style="display: block;margin: 20px 35px 60px 36px;">
         <i class="dian"></i>
         <i class="kuang_jiao"></i>
-       {{ loop.index }}. {{ item.description }}
+        {{ item.description }}
       </div>
       {% else %}
       {# 只一条 #}
       <div class="dashiji-con1 clearfix" style="display: block;margin: 20px 35px 60px 36px;">
           <i class="dian1"></i>
           <i class="kuang_jiao1"></i>
-         {{ loop.index }}. {{ item.description }}
+          {{ item.description }}
          <div class="shiji-pic clearfix">
               <img src="{{ helper.imageThumb(item.thumb) }}" alt="">
             </div>
@@ -232,7 +234,7 @@
       <div class="dashiji-con clearfix" style="display: block;margin: 20px 35px 60px 36px;">
         <i class="dian"></i>
         <i class="kuang_jiao"></i>
-       {{ loop.index }}. {{ item.description }}
+        {{ item.description }}
        <div class="shiji-pic3 clearfix">
             <img src="{{ helper.imageThumb(item.thumb,'280x210') }}" alt="">
             <img src="{{ helper.imageThumb(item.thumb2,'280x210') }}" alt="">
@@ -243,7 +245,7 @@
       <div class="dashiji-con clearfix" style="display: block;margin: 20px 35px 60px 36px;">
         <i class="dian"></i>
         <i class="kuang_jiao"></i>
-        {{ loop.index }}. {{ item.description }}
+        {{ item.description }}
         <div class="shiji-pic3 clearfix">
           <img src="{{ helper.imageThumb(item.thumb,'280x210') }}" alt="">
           <img src="{{ helper.imageThumb(item.thumb2,'280x210') }}" alt="">
@@ -452,23 +454,23 @@
           if (msg[key][key1][key11].thumb3 == '' || msg[key][key1][key11].thumb3 == null) {
             if (msg[key][key1][key11].thumb == '' || msg[key][key1][key11].thumb == null) {
               //{# 无图 #}
-              html += '<div class="dashiji-con" style="display: block;margin: 20px 35px 60px 36px;">'
+              html += '<div class="dashiji-con clearfix" style="display: block;margin: 20px 35px 60px 36px;">'
               html += '<i class="dian"></i>'
-              html += '<i class="kuang_jiao"></i>'+ (key11+1) +'. '+ msg[key][key1][key11].description +'</div>'
+              html += '<i class="kuang_jiao"></i>'+ msg[key][key1][key11].description +'</div>'
             } else {
               //{# 只一条 #}
               html += '<div class="dashiji-con1 clearfix" style="display: block;margin: 20px 35px 60px 36px;">'
               html += '<i class="dian1"></i>'
-              html += '<i class="kuang_jiao1"></i>'+ (key11+1) +'. '+ msg[key][key1][key11].description +'<div class="shiji-pic clearfix">'
+              html += '<i class="kuang_jiao1"></i>'+ msg[key][key1][key11].description +'<div class="shiji-pic clearfix">'
               html += '<img src="'+fn.imageThumb(msg[key][key1][key11].thumb)+'" alt="">'
               html += '</div>'
               html += '</div>'
             }
           } else {
             if (key11 == msg[key][key1].length) {
-              html += '<div class="dashiji-con" style="display: block;margin: 20px 35px 60px 36px;">'
+              html += '<div class="dashiji-con clearfix" style="display: block;margin: 20px 35px 60px 36px;">'
               html += '<i class="dian"></i>'
-              html += '<i class="kuang_jiao"></i>'+ (key11+1) +'. '+ msg[key][key1][key11].description
+              html += '<i class="kuang_jiao"></i>'+ msg[key][key1][key11].description
               html += '<div class="shiji-pic3 clearfix">'
               html += '<img src="'+fn.imageThumb(msg[key][key1][key11].thumb,'280x210')+'" alt="">'
               html += '<img src="'+fn.imageThumb(msg[key][key1][key11].thumb2,'280x210')+'" alt="">'
@@ -476,9 +478,9 @@
               html += '</div>'
               html += '</div>'
             } else {
-              html += '<div class="dashiji-con" style="display: block;margin: 20px 35px 0px 36px;">'
+              html += '<div class="dashiji-con clearfix" style="display: block;margin: 20px 35px 0px 36px;">'
               html += '<i class="dian"></i>'
-              html += '<i class="kuang_jiao"></i>'+ (key11+1) +'. '+ msg[key][key1][key11].description
+              html += '<i class="kuang_jiao"></i>'+ msg[key][key1][key11].description
               html += '<div class="shiji-pic3 clearfix">'
               html += '<img src="'+fn.imageThumb(msg[key][key1][key11].thumb,'280x210')+'" alt="">'
               html += '<img src="'+fn.imageThumb(msg[key][key1][key11].thumb2,'280x210')+'" alt="">'
