--- a/views/yimin_index.html
+++ b/views/yimin_index.html
@@ -17,30 +17,25 @@
       position: fixed;
       z-index: 999;
       display: none;
-      /* border-top: 0px; */
       overflow: visible;
     }
     .nationality_guoqi{
-      height: 141px;
-      /* border: 3px solid #c13232; */
-      background: #f1f4f6;
-      /* padding: 0 20px; */
-      position: relative;
-      margin: 0 auto;
+      height: 150px;
     }
     .liuxue-guoqi img{
       width:40px;
       height:32px;
       margin: 0;
-
     }
     .liuxue-guoqi p{
       width: 48px;
     }
     .liuxue-guoqi a{
-      margin: 10px 0px 25px 91px;
-      height: 35px;
+      margin: 10px 0px 0px 91px;
       text-align: center;
+    }
+    .liuxue-guoqi a:hover{
+      background: rgba(0,0,0,0.07);
     }
     .yimin-shou {
       width: 50px;
@@ -60,7 +55,7 @@
     点击进入移民国家地区
   </div>
   <div class="liuxue-guojia-line" style="height: 150px;"></div>
-  <div class="nationality_guoqi" style="height: 150px;">
+  <div class="nationality_guoqi">
     <div class="liuxue-guoqi clearfix" style="margin-left:0px;">
       <a href="#country1"><img src="{{helper.cdnhost}}/assets/img/home_icon_mg@2x.png" alt="美国移民"><p>美国</p></a>
       <a href="#country3"><img src="{{helper.cdnhost}}/assets/img/home_icon_jnd@2x.png" alt="加拿大移民"><p>加拿大</p></a>
