--- a/views/yimin_case.html
+++ b/views/yimin_case.html
@@ -67,15 +67,16 @@
     }
     .yimin-c-tag span {
       float: left;
-      width: 80px;
+      width: 78px;
       height: 24px;
       text-align: center;
       line-height: 24px;
       font-size: 12px;
       color: #d17878;
       background: #fbf3f3;
-      border-radius: 10px;
+      border-radius: 25px;
       margin-right: 12px;
+      border: 1px solid #d21b29;
     }
     .yimin-c-btn {
       position: absolute;
